--- a/.github/ISSUE_TEMPLATE/newbugreport.yml
+++ b/.github/ISSUE_TEMPLATE/newbugreport.yml
@@ -13,12 +13,11 @@ body:
        Thanks for taking the time to fill out thing bug report!
  - type: input
    id: contact
-   
    attributes:
      label: Contract Details
      description: Also tell us, what did you expect to happen?
      placeholder: ex. email@example.com
-   validation:
+   validations:
      required: false
  - type: textarea
    id: what-happened
@@ -27,7 +26,7 @@ body:
      description: Also tell us, what did you expect to happen?
      placeholder: Tell us what you see!
      value: "A bug happened!"
-   validation:
+   validations:
      required: true
  - type: dropdown
    id: Version
@@ -38,7 +37,7 @@ body:
        - 1.0.2 (Default)
        - 1.0.3 (Edge)
      default: 0
-   validation:
+   validations:
      required: true
  - type: dropdown
    id: browsers
@@ -63,6 +62,7 @@ body:
      description: By submitting this issue, you agree to follow our [Code of Conduct](htpps://example.com)
      option:
        - label: I agree to follow this project's Code of Conduct
-         required: true
+   validations:
+      required: true
           
 ---
