--- a/.github/ISSUE_TEMPLATE/feature--.yml
+++ b/.github/ISSUE_TEMPLATE/feature--.yml
@@ -1,7 +1,7 @@
 ---
 
 name: NewFeatureReport
-about: Describe this issue template's purpose here.
+description: Describe this issue template's purpose here.
 title: '[Feature] : '
 labels: '[Feature]'
 assignees: 
