--- a/.github/ISSUE_TEMPLATE/feature--.yml
+++ b/.github/ISSUE_TEMPLATE/feature--.yml
@@ -15,24 +15,15 @@ body:
    id: contact
    attributes:
      label: Contract Details
-     description: Also tell us, what did you expect to happen?
+     description: Thanks for taking the time to fill out this bug report!
      placeholder: ex. email@example.com
    validations:
      required: false
- - type: textarea
-   id: what-happened
-   attributes:
-     label: What happened?
-     description: Also tell us, what did you expect to happen?
-     placeholder: Tell us what you see!
-     value: "A bug happened!"
-   validations:
-     required: true
  - type: dropdown
    id: Version
    attributes:
-     label: Version
-     description: What version of our software are you running?
+     label: Type of request?
+     description: Select the type of your reqquest
      options:
        - 1.0.2 (Default)
        - 1.0.3 (Edge)
@@ -42,7 +33,7 @@ body:
  - type: dropdown
    id: browsers
    attributes:
-     label: What browsers are you seeing the problem on?
+     label: Which is the OS which you want to suggest?
      multiple: true
      options:
        - Firefox
@@ -52,17 +43,8 @@ body:
  - type: textarea
    id: logs
    attributes:
-     label: Relevant log output
-     description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backtick.
+     label: What are the detail of your suggestion?
+     description: Explain what do you want
      render: shell
- - type: checkboxes
-   id: terms
-   attributes:
-     label: Code of Conduct
-     description: By submitting this issue, you agree to follow our [Code of Conduct](htpps://example.com)
-     options:
-       - label: I agree to follow this project's Code of Conduct
-   validations:
-     required: true
-
+ 
 ---
